--- a/src/components/generics/youtube_player/styles.css
+++ b/src/components/generics/youtube_player/styles.css
@@ -1,6 +1,5 @@
 .youtube-video{
-    width: 50vw;
-    height: 50vh;
+    width: 80%;
     border: 0.1em solid #585858;
     background-color: #585858;
 }
