--- a/src/components/generics/header/styles.css
+++ b/src/components/generics/header/styles.css
@@ -8,7 +8,7 @@
 }
 
 .image-header-container .image-header-sub-container{
-    width: 960px;
+    width: 150%;
     padding-top: 92px;
     background-color: #ffffff;
     text-align: center;
