--- a/src/components/generics/activity/new_integral_activity/styles.css
+++ b/src/components/generics/activity/new_integral_activity/styles.css
@@ -1,13 +1,5 @@
-.container-integral-activity{
-    margin-bottom: 3em;
-    text-align: left;
-}
-
-.activity-statement{
-    margin-top: 3em;
-    margin-bottom: 2em;
-}
-
-.question-statement li{
-    font-size: inherit;
+div.container-new-integral-activity{
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
 }
