Alterações e correções em imagens, textos e design

--- a/src/components/generics/buttons/basic_button/styles.css
+++ b/src/components/generics/buttons/basic_button/styles.css
@@ -1,12 +1,12 @@
 .button{
-    border: 0.1em solid #41B4C4;
+    border: 0.1em solid #ED9070;
     background-color: white;
     border-radius: 0.2em;
     font-size: 0.9em;
     font-weight: 900;
     letter-spacing: 0.2em;
     padding: 1em 2em;
-    color: #41B4C4;
+    color: #ED9070;
 }
 
 .bigger-button{
