--- a/src/components/generics/activity/new_integral_activity/styles.css
+++ b/src/components/generics/activity/new_integral_activity/styles.css
@@ -1,5 +1,6 @@
 div.container-new-integral-activity{
     margin-top: 50px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
 }
