--- a/src/components/generics/top_bar/styles.css
+++ b/src/components/generics/top_bar/styles.css
@@ -16,10 +16,10 @@ div.top-bar-container div.top-bar-line{
     height: 25px;
     width: 100%;
 }
-.top-bar-container.top-bar-container-hidden-without-animation .top-bar-line{
+div.top-bar-container.top-bar-container-hidden-without-animation .top-bar-line{
     height: 0px;
 }
-.top-bar-container.top-bar-container-hidden .top-bar-line{
+div.top-bar-container.top-bar-container-hidden .top-bar-line{
     animation-name: fadeInOutTopBarInverse;
     animation-timing-function: ease-in-out;
     animation-iteration-count: 1;
