--- a/src/components/generics/pagination/styles.css
+++ b/src/components/generics/pagination/styles.css
@@ -127,7 +127,7 @@ div.slide-info-container{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: #f4f3f3;
+    background-color: rgb(249, 249, 249);
 }
 
 div.slide-info-sub-container{
@@ -150,7 +150,7 @@ div.slide-info-box-container{
 
 div.pagination-top-container{
     width: 100%;
-    background-color: #f4f3f3;
+    background-color: rgb(249, 249, 249);
     display: flex;
     flex-direction: row;
     justify-content: center;
