--- a/src/components/generics/text/example-box/styles.css
+++ b/src/components/generics/text/example-box/styles.css
@@ -4,7 +4,7 @@ div.example-box-container{
     border-color: rgb(101, 196, 209);
 }
 
-div.example-box-container div.title-container{
+div.example-box-container div.example-title-container{
     display: flex;
     flex-direction: row;
     height: 20px;
@@ -19,11 +19,11 @@ div.example-box-container div.title-container{
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#66c5d1', endColorstr='#4aa6bf', GradientType=1 );
 }
 
-div.example-box-container div.title-container div.image{
+div.example-box-container div.example-title-container div.image{
     margin-top: -5px;
 }
 
-div.example-box-container div.title-container div.title{
+div.example-box-container div.example-title-container div.title{
     width: 100%;
     text-align: center;
     margin-left: -40px;
