--- a/src/components/generics/title/styles.css
+++ b/src/components/generics/title/styles.css
@@ -1,5 +1,7 @@
 .title-container{
     font-weight: 700;
+    margin-top: 25px;
+    font-size: 14pt;
     text-align: center;
-    font-size: 1.2em;
+    justify-content: center;
 }
