--- a/src/components/generics/pagination/styles.css
+++ b/src/components/generics/pagination/styles.css
@@ -1,13 +1,16 @@
 .pagination{
     list-style: none;
     text-align: center;
-    margin-bottom: 0em;
-    margin-top: 0em;
+    margin-bottom: 0;
+    margin-top: 0;
     padding-left: 0;
+    font-weight: 300;
 }
 
 .disabled-page{
     visibility: hidden;
+    width: 0;
+    height: 0;
 }
 
 .pagination li{
@@ -15,16 +18,16 @@
 }
 
 .pagination li a {
-    padding-top: 0.25em;
-    width: 2.25em;
-    height: 2em;
-    margin: 0.2em 0.2em;
-    display: inline-block;
+    width: 50px;
+    height: 50px;
+    margin: 0px 10px 0px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #f4f3f3;
-    border: 0.15em solid #65c4d1;
+    border: 3px solid #65c4d1;
     color: #41b4c4;
-    font-weight: 700;
-    border-radius: 50%;
+    border-radius: 50px;
 }
 
 .pagination li a:hover{
@@ -38,11 +41,12 @@
     background: #ffd478;
     color: #999D9E;
     cursor: pointer;
+    font-weight: 700;
 }
 
 div.unit-box-container{
-    border: 0.05em solid #41b4c4;
-    border-radius: 0em 0em 0.4em 0.4em;
+    border: 1px solid #41b4c4;
+    border-radius: 0 0 10px 10px;
     box-shadow: 0em 0.3em 0.5em rgb(160, 134, 77, 0.5);
     background-color: #41b4c4;
     height: 60px;
@@ -58,6 +62,7 @@ div.button-item{
     padding-bottom: 11px;
     width: 80px;
     text-align: center;
+    font-size: 35pt;
 }
 
 div.unit-box-bar{
@@ -93,7 +98,7 @@ div.pagination-container{
 }
 
 div.pagination-sub-container{
-    width: 960px;
+    width: 760px;
 }
 
 div.pagination-second-container{
@@ -105,16 +110,17 @@ div.pagination-second-container{
 
 div.greek-first-column{
     float: left;
-    height: 135px;
+    margin-left: 15px;
 }
 
 div.page-control-container{
     width: 880px;
+    align-self: flex-start;
 }
 
 div.greek-second-column{
     float: right;
-    height: 135px;
+    margin-right: 15px;
 }
 
 .greek-slide-text{
