--- a/src/components/generics/text/example-box/styles.css
+++ b/src/components/generics/text/example-box/styles.css
@@ -38,4 +38,28 @@ div.example-box-container div.text-container{
     width: auto;
 }
 
+div.example-box-container div.text-container.styled-list ul {
+    list-style: none;
+}
+
+div.example-box-container div.text-container.styled-list ul li::before{
+    content: "•"; 
+    font-size: 150%;
+    color: #A8B4E2;
+    display: inline-block; 
+    width: 20px;
+    margin-left: -20px;
+}
+
+div.example-box-container div.text-container.styled-list ul li::after{
+    width: 80%;
+    margin-left: 10%;
+    height: 1px;
+    display:flex;
+    flex-direction: column;
+    content: " ";
+    margin-top: 15px;
+    margin-bottom: 20px;
+    background-image: radial-gradient(circle, #88e0eb, #78d1e0, #69c3d5, #59b4ca, #4aa6bf);
+}
 
