--- a/src/components/generics/characters/talk/styles.css
+++ b/src/components/generics/characters/talk/styles.css
@@ -1,21 +1,23 @@
 div.main-container{
+    position: fixed;
     width: 100%;
     height: 100%;
-    top: 0;
-    position: fixed;
-    background-color: rgba(244, 243, 243, 0.5);
-}
-
-div.master-container{
-    position: relative;
+    background-color: rgba(51,49,44, 0.65);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation-name: fadeIn;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+    animation-duration: 1.5s;
 }
 
 div.character-container{
     margin: auto;
     width: 820px;
-    height: 820px;
+    height: 520px;
     background: no-repeat;
-    background-position-y: 40px;
+    background-position: center;
     background-size: 100%;
     animation-name: fadeInOut;
     animation-timing-function: ease-in-out;
@@ -27,29 +29,13 @@ div.character-container.green-container{
     background-position-y: 0px;
 }
 
-div.character-container div.content{
-    margin-left: 46%;
-    text-align: justify;
-    width: 23em;
-    height: 12em;
-}
-
-div.character-container div.text{
-    color: black;
-    margin-top: 1em;
-}
-
-div.character-container div.title{
-    text-align: center;
-}
-
 div.buttons-container{
     color: rgb(101, 196, 209);
     text-align: center;
     font-weight: 700;
     display: inline-block;
     margin-left: 340px;
-    margin-top: 390px;
+    margin-top: 365px;
 }  
 
 div.character-container.green-container .buttons-container{
@@ -58,29 +44,52 @@ div.character-container.green-container .buttons-container{
 
 div.buttons-container div.button{
     float: left;
-    border: 0.01em solid #2d2d2d;
-    background-color: rgb(255, 212, 120);
-    border-radius: 1em;
-    padding: 0.5em 1em 0.5em 1em;
+    border: 2px solid #FFD478;
+    border-radius: 10px;
+    background-color: #FFD478;
+    color: #41B4C4;
+    font-weight: 700;
+    padding: 5px 10px 5px 10px;
     cursor: pointer;
+    font-size: 14pt;
+}
+
+div.buttons-container div.button:hover{
+    border-color: #027E8F; 
+    color: #027E8F; 
 }
 
 div.buttons-container div.button.first-button{
-    margin-left: 11em;
+    margin-left: 182.5px;
 }
 
 div.buttons-container div.button.next-button, div.buttons-container div.button.previous-button, div.buttons-container div.button.last-previous{
-    border-radius: 1em;
+    border-radius: 12.5px;
+}
+
+div.buttons-container div.button.next-button, div.buttons-container div.button.previous-button, div.buttons-container div.button.last-previous{
+    font-size: 22pt;
+    padding: 0px 9px 3px 12px;
+}
+
+div.buttons-container div.button.ok-button{
+    font-size: 18pt;
+    padding: 4px 5px 4px 8px;
+}
+
+div.buttons-container div.button.first-button{
+    font-size: 14pt;
+    padding: 4px 5px 4px 8px;
 }
 
 div.buttons-container div.button.previous-button{
-    margin-right: 2em;
-    margin-left: 11em;
+    margin-right: 20px;
+    margin-left: 188px;
 }
 
 div.buttons-container div.button.last-previous{
-    margin-right: 2em;
-    margin-left: 10em;
+    margin-right: 20px;
+    margin-left: 175px;
 }
 
 div.close-button-container{
@@ -101,53 +110,6 @@ div.close-button-underline{
     background-color: rgb(255, 212, 120);
 }
 
-@media only screen and (min-width: 1600px) {
-    div.character-container{
-        width: 920px;
-        height: 920px;
-        background-position-y: 50px;
-        width: 70em;
-    }
-    div.character-container div.content{
-        margin-left: 48.5%;
-        width: 30em;
-        height: 19em;
-    }
-    div.buttons-container{
-        margin-left: 410px;
-        margin-top: 590px;
-    }
-    div.buttons-container div.button.first-button{
-        margin-left: 25.5em;
-    }
-    div.buttons-container div.button.previous-button{
-        margin-left: 25.9em;
-        margin-right: 2em;
-    }
-    div.buttons-container div.button.last-previous{
-        margin-left: 25em;
-    }
-    div.buttons-container div.button.next-button, div.buttons-container div.button.previous-button, div.buttons-container div.button.last-previous{
-        border-radius: 1em;
-    }
-    div.close-button-container{
-        margin-left: 835px;
-        margin-top: 1.5em;
-    }
-    div.close-button-underline{
-        width: 4.9em;
-        height: 0.1em;
-        margin-left: 0.5em;
-    }
-    div.character-container.green-container .close-button-container{
-        margin-left: 815px;
-    }
-    div.character-container.green-container .buttons-container{
-        margin-top: 600px;
-        margin-left: 385px;
-    }
-}
-
 @keyframes fadeInOut {
     100% {
         opacity:1;
@@ -166,5 +128,32 @@ div.close-button-underline{
     }
     0% {
         opacity:0;
+    }
+}
+
+@keyframes fadeIn {
+    100% {
+        background-color: rgba(51,49,44, 0.65);
+    }
+    90% {
+        background-color: rgba(51,49,44, 0.70);
+    }
+    75% {
+        background-color: rgba(51,49,44, 0.75);
+    }
+    60% {
+        background-color: rgba(51,49,44, 0.8);
+    }
+    45% {
+        background-color: rgba(51,49,44, 0.85);
+    }
+    30% {
+        background-color: rgba(51,49,44, 0.90);
+    }
+    15% {
+        background-color: rgba(51,49,44, 0.95);
+    }
+    0% {
+        background-color: rgba(51,49,44, 1);
     }
 }
