--- a/src/components/generics/characters/talk/styles.css
+++ b/src/components/generics/characters/talk/styles.css
@@ -104,9 +104,9 @@ div.character-container.green-container .close-button-container{
 }
 
 div.close-button-underline{
-    height: 0.1em;
-    width: 4.7em;
-    margin-left: 0.6em;
+    height: 1.25px;
+    width: 85px;
+    margin-left: 10px;
     background-color: rgb(255, 212, 120);
 }
 
