--- a/src/components/generics/title/styles.css
+++ b/src/components/generics/title/styles.css
@@ -1,7 +1,8 @@
 .title-container{
     font-weight: 700;
     margin-top: 25px;
-    font-size: 14pt;
+    margin-bottom: 25px;
+    font-size: 16pt;
     text-align: center;
     justify-content: center;
 }
