--- a/src/components/generics/text/algorithm-box/styles.css
+++ b/src/components/generics/text/algorithm-box/styles.css
@@ -5,6 +5,7 @@ div.algorithm-box-container div.title-container{
     padding: 25px 30px 30px 30px;
     background: #B7B7B7;
     border-radius: 10px 10px 0px 0px;
+    margin-bottom: 0px;
 }
 
 div.algorithm-box-container div.title-container div.image{
